@startuml CDL

skinparam shadowing false

package Model{
    class Tournoi{
        - String nom
        +getName()
        +toString()
        +adversaire()
        +advJoueurSelect()
        +addJoueur(String nom)
        +selectJoueur(int joueur)
        +selectJoueur2(int joueur)
        +unselectJoueur()
        +joueurSize()
        +copyLst()
        +joueurSelected()
        +joueur2Selected()
        +getAllinscrit()
    }
    class Match{
        -Joueur joueur1
        -Joueur joueur2
        -Resultats r
        +getJoueur1()
        +getJoueur2()
        +getResultats()
        +equals(Object o)
        +hashCode()
    }

    class Joueur{
        -String nom
        +getName()
        +copy()
        +toString()
        +equals(Object o)
        +hashCode()
    }
    class Resultats{
        -enum Resultats
    }
    class ListeTournois{
        +getLines()
        +nbLines()
        +getNumLineSelected()
        +select(int index)
        +unselectTournoi()
        +notif()
        +getAllInscrit()
        +joueurSize()
        +selectJoueur(int joueur)
        +selectJoueur2(int joueur)
        +getAllMatch(int numLineSelected)
        +matchSize()
        +getAdversaire()
        +advJoueurSelect()
        +addMatch(Joueur j1,Joueur j2,Resultats r)
        +updMatch(Joueur j1,Joueur j2,Resultats r)
        +deleteMatch(Match m)
        +selectMatch(int index)
        +getSelectedMatch()
        +unselectMatch()



    }
}
package Controller{
    class Ctrl<<Controller>>{
        +lineSeection(int numLine)
        +getNumLineSelected()
        +cb1Selection()
        +cb2Selection()
        +addmatch(Joueur j1,Joueur j2,Resultats r)
        +updmatch(Joueur j1,Joueur j2,Resultats r)
        +selectMatch(int index)
        +getSelectMatch()
        +getAllInscrit(int numLineSelected)
        +getAllMatch(int numLineSelected)
        +getAdversaire()
        +getLines()
        +unselectMatch()
        +advJoueurSelect()


    }
}
package View {
    class ConfirmationSuppressionMatch<<View>>{
        -Match deleteMatch
    }
     class GestionTournois<<View>>{
        -ListView<Tournois> listetournois
        -TableView<Match> listematchs
        -ListView<Joueur> listeJoueurs
        +update()

    }
}
ListeTournois "1" o-r- "*" Tournoi : contient
Tournoi "1" o-r- "*" Match : contient
Tournoi "1" o-- "0*" Joueur : est inscrit
Match "1" *-- "2" Joueur :est composé
Match *-- Resultats
Controller ..> Model : use
View"1" <--"1" Controller
@enduml